--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,3 +1,4 @@
+# Shadow
 shadow = true;
 shadow-radius = 14;
 shadow-opacity = 0.20;
@@ -5,26 +6,35 @@ shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-exclude = [ ];
 
+# Fade
 fading = true;
 fade-in-step = 0.1;
 fade-out-step = 0.1;
 fade-exclude = [ ];
 
+# Opacity
 inactive-opacity = 1;
 active-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = false;
 focus-exclude = [ ];
-opacity-rule = [ 
-  "100:class_g = 'Thunar'"
+opacity-rule = [
+    "80:class_g = 'Rofi'",
+    # "95:class_g = 'Alacritty' && focused",
+    "90:class_g = 'Alacritty' && !focused"
 ];
 
+# Corners
 corner-radius = 0;
 rounded-corners-exclude = [
   "name = 'QTILE_BAR'",
   "class_g = 'Xephyr'",
 ];
 
+# Blur
+blur-background = true;
 blur-method = "dual_kawase";
-blur-strength = 4;
+blur-strength = 6;
 blur-kern = "3x3box";
 blur-background-fixed = false;
 blur-background-exclude = [
@@ -32,4 +42,9 @@ blur-background-exclude = [
 ];
 
 backend = "glx";
+glx-no-stencil = true;
+glx-copy-from-front = false;
+glx-swap-method = 2;
 vsync = true;
+
+xrender-sync-fence = true;
