--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -9,11 +9,11 @@ env:
 window:
   padding:
     x: 2
-    y: 1
+    y: 0
   title: Terminal
   decorations: None
   opacity: .93
-  dynamic_padding: true
+  dynamic_padding: false
   # dynamic_title: false
 
 scrolling:
@@ -21,6 +21,9 @@ scrolling:
   multiplier: 3
 
 font:
+  offset:
+    x: 0    # For letter spacing (default: 0).
+    y: 6    # For line spacing (default: 0).
   normal:
     family: JetBrainsMono Nerd Font
     style: Regular
