--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -20,8 +20,10 @@ inactive-opacity-override = false;
 focus-exclude = [ ];
 opacity-rule = [
     "80:class_g = 'Rofi'",
-    # "95:class_g = 'Alacritty' && focused",
-    "90:class_g = 'Alacritty' && !focused"
+    "90:class_g = 'Alacritty' && focused",
+    "80:class_g = 'Alacritty' && !focused",
+    "90:class_g = 'kitty' && focused",
+    "80:class_g = 'kitty' && !focused",
 ];
 
 # Corners
